# zephyr-badusb

./: .gitignore  README.md
badusb/: CMakeLists.txt  README.md  app.overlay  prj.conf  prj.debug.conf  prj.release.conf  prj.smp.conf
badusb/boards/nologo/nologo_usb/: Kconfig  Kconfig.defconfig  Kconfig.nologo_usb  board.cmake  board.yml  nologo_usb-pinctrl.dtsi  nologo_usb.dts  nologo_usb.yaml  nologo_usb_defconfig
badusb/boards/nologo/nologo_usb2/: Kconfig  Kconfig.defconfig  Kconfig.nologo_usb2  board.cmake  board.yml  nologo_usb2-pinctrl.dtsi  nologo_usb2.yaml  nologo_usb2_rp2350a_m33.dts  nologo_usb2_rp2350a_m33.yaml  nologo_usb2_rp2350a_m33_defconfig
badusb/examples/: config_handshake.txt  config_keyboard_test.txt  config_rickroll.txt  config_wifi_password.txt
badusb/src/: app_main.c  nologo_build.h  nologo_cdc.c  nologo_cdc.h  nologo_config.c  nologo_config.h  nologo_hid.c  nologo_hid.h  nologo_printk_router.c  nologo_printk_router.h  nologo_script.c  nologo_script.h  nologo_status_led.c  nologo_status_led.h  nologo_usb.c  nologo_usb.h
examples/: config_disable_defender.txt  config_hello_world.txt  config_linux_terminal.txt  config_loop_goto.txt  config_macos_spotlight.txt  config_open_terminal.txt  config_reverse_shell.txt  config_string_delay.txt  sync_host.ps1
firmware/: nologo_usb2_debug.uf2  nologo_usb2_release.uf2  nologo_usb_debug.uf2  nologo_usb_release.uf2
